2015-03-03  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Use F1-F8 keys to handle four axes.

	Previously, we used F1 for help and F3-F8 for three axes.

	* src/ftmulti.c (Process_Event): Implement.
	(Help): Updated.

2015-03-03  Werner Lemberg  <wl@gnu.org>

	Recommend `?' instead of `F1' for help.

	Usually, both `F1' and `?' map to the help screen.  However, not all
	display managers provide the F1 key to the application.

	* src/ftdiff.c (main), src/ftgrid.c (main), src/ftmulti.c (main),
	src/ftstring.c (main), src/ftview.c (main): Apply.

2014-12-30  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.5 released.
	=========================


	Tag sources with `VER-2-5-5'.

	* README: Updated.
	* src/*.1: Updated.

	* Makefile (dist): Fix typos.

2014-12-11  Werner Lemberg  <wl@gnu.org>

	* Makefile (dist): Use older POSIX standard for `tar'.

	Apparently, BSD tar isn't capable yet of handling POSIX-1.2001
	(contrary to GNU tar), so force the POSIX-1.1988 format.

	Problem reported by Stephen Fisher <sfisher@SDF.ORG>.

2014-12-06  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.4 released.
	=========================


	Tag sources with `VER-2-5-4'.

	* README: Updated.
	* src/*.1: Updated.

2014-11-22  Werner Lemberg  <wl@gnu.org>

	Show FreeType version in demo program help screens.

	* src/ftdiff.c (event_help), src/ftgrid.c (event_help),
	src/ftmulti.c (Help), src/ftstring.c (event_help), src/ftview.c
	(event_help): Implement it.

2014-05-11  Werner Lemberg  <wl@gnu.org>

	Fix Savannah bug #42182.

	* src/ttdebug.c (main): Fix typos.

2014-03-06  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.3 released.
	=========================


	Tag sources with `VER-2-5-3'.

	* README: Updated.
	* src/*.1: Updated.

2014-03-04  Werner Lemberg  <wl@gnu.org>

	* Makefile (LINK_LIBS) [unixdev]: Don't use pkg-config for bzip2.

	Not all platforms have `bzip2.pc'.  We also add `-lz' just for
	completeness.

2014-01-30  Werner Lemberg  <wl@gnu.org>
